--- a/buildspec.yml
+++ b/buildspec.yml
@@ -19,7 +19,7 @@ phases:
     commands:
       - rm -rf public
       - hugo
-      - aws s3 sync public/ s3://hugoawsbucketemiliano/  --delete
+      - aws s3 sync public/ s3://hugoawsbucketemiliano  --delete
   post_build:
     commands:
       - echo Build completed on `date`
