--- a/hugo.toml
+++ b/hugo.toml
@@ -2,3 +2,6 @@ baseURL = 'http://hugoaws.s3-website-us-east-1.amazonaws.com/'
 languageCode = 'en-us'
 title = 'My New Hugo Site'
 theme = 'ananke'
+[[deployment.targets]]
+name="awsbucket"
+URL="s3://hugoaws/?region=us-east-1"
