--- a/buildspec.yml
+++ b/buildspec.yml
@@ -17,7 +17,7 @@ phases:
     commands:
       - rm -rf public
       - hugo
-      - aws s3 sync public/ s3://hugoaws  --delete
+      - hugo deploy
   post_build:
     commands:
       - echo Build completed on `date`
